# fund_4_sem

lab1/: CMakeLists.txt
lab1/task1/: CMakeLists.txt
lab1/task1/include/: Array.h  Container.h  array.h  container.h
lab1/task1/src/: array.cpp  container.cpp
lab1/task1/tests/: array_test.cpp  container_test.cpp
lab1/task2/: CMakeLists.txt
lab1/task2/include/: List.h  array.h
lab1/task2/src/: list.cpp
lab1/task2/tests/: list_test.cpp
lab1/task3/: CMakeLists.txt
lab1/task3/include/: container.h  deque.h  list.h
lab1/task3/src/: deque.cpp  list.cpp
lab1/task3/tests/: deque_test.cpp
lab1/task4/: CMakeLists.txt
lab1/task4/include/: deque.h  list.h  stack.h
lab1/task4/src/: stack.cpp
lab1/task4/tests/: stack_test.cpp
lab1/task5/: CMakeLists.txt
lab1/task5/include/: Vector.h  container.h  vector.h
lab1/task5/src/: vector.cpp
lab1/task5/tests/: vector_test.cpp
lab1/task6/: CMakeLists.txt
lab1/task6/include/: UniquePtr.h
lab1/task6/src/: UniquePtr.cpp
lab1/task6/tests/: UniquePtr_test.cpp
lab2/: CMakeLists.txt
lab2/include/: bigint.hpp
lab2/src/: bigint.cpp
lab2/task1/: CMakeLists.txt
lab2/task1/src/: bigint.cpp
lab2/task2/src/: bigint.cpp
lab2/tests/: bigint_test.cpp
lab3/: CMakeLists.txt
lab3/include/: BSTTree.h  MyMap.h
lab3/src/: BSTTree.cpp  MyMap.cpp
lab3/tests/: bst_tests.cpp
